# GammaXRay

./: CMakeLists.txt  init_vis.mac
src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  main.cc
